--- a/java.html
+++ b/java.html
@@ -2,6 +2,20 @@
 <html>
   <head>
     <title>JAVA</title>
+    <style>
+      #gist121227697 > div > div.gist-data > div {
+        display: flex;
+        justify-content: center;
+      }
+
+      #file-java-md {
+        width: 75%;
+      }
+
+      pre {
+        font-size: 16px;
+      }
+    </style>
   </head>
   <body>
     <script src="https://gist.github.com/hkaol/7564c348a14dbc9dca8af8d186d2ecf3.js"></script>
